<?xml version="1.0" encoding="utf-8"?>
<!--
   Copyright 2016 Google LLC

   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.
-->
<resources>
  <string name="app_name">PrivacyScan</string>
  <string name="ar_menu_touch_prompt">Tap for more info</string>
  <string name="ar_menu_capabilities">Capabilities:</string>
  <string name="ar_menu_model">Model:</string>
  <string name="ar_menu_brand">Brand:</string>
  <string name="ar_menu_type">Type:</string>

<!--  Device Types-->
  <string name="THERMOSTAT">Smart Thermostat</string>
  <string name="CAMERA">Smart Camera</string>
  <string name="MICROPHONE">Smart Microphone</string>
  <string name="MOTION">Smart Motion Sensor</string>
  <string name="SWITCH">Smart Switching Outlet</string>
  <string name="LIGHT">Smart Light Bulb</string>
  <string name="SPEAKER">Smart Speaker</string>

<!--  Device Models-->
  <string name="NEST_V1">Nest (First Generation</string>

<!--  Device Brands-->
  <string name="HUE">Hue</string>
  <string name="SAMSUNG">Samsung</string>
  <string name="SMARTTHINGS">SmartThings</string>
  <string name="LOCK">Lock</string>
  <string name="NEST">Nest</string>
  <string name="ARLO">Arlo</string>
  <string name="AUGUST">August</string>

<!--  Data Types-->
  <string name="DATA">Personally Identifiable Data</string>
  <string name="AUDIO">Audio</string>
  <string name="VIDEO">Video</string>
  <string name="PRESCENCE">Presence</string>      // This typo is propagated in the QR Codes and Augmented Images database, leave.
  <string name="PRESENCE">Presence</string>
  <string name="INFORMATION">Information</string>
  <string name="LOCATION">Location</string>
  <string name="NONE">None</string>

<!--  Capability Descriptions-->
  <string name="DATA_desc">This device has access to personall </string>
  <string name="AUDIO_desc">This device can record/send any audio of the immediate area.</string>
  <string name="VIDEO_desc">This device can record/send video of the immediate area.</string>
  <string name="PRESENCE_desc">This device can determine when certain individuals are nearby via proximity and other sensors.</string>
  <string name="INFORMATION_desc">This device has access to potentially identifiable information, such as .</string>
  <string name="LOCATION_desc">This device can </string>


<!--  Application Strings-->
  <string name="bt_off">Bluetooth LE Scanning Off</string>
  <string name="bt_on">Bluetooth LE Scanning On</string>
  <string name="device_found_btle">Device Found (BT LE): </string>
  <string name="device_found">Device Found (QR): </string>
  <string name="device_data_error">Failed to parse data from BT LE Payload</string>

  <string name="device_info">Device Information</string>
  <string name="device_info_type">Device Type</string>
  <string name="device_info_brand">Manufacturer</string>
  <string name="device_info_model">Model</string>
  <string name="device_info_datatypes">Device Information</string>

</resources>
