<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="150dp"
    android:layout_height="230dp"
    android:layout_weight="0"
    android:background="@drawable/rectangle_transparent">

    <TextView
        android:id="@+id/ar_menu_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="Device Details" />

    <TextView
        android:id="@+id/ar_menu_device_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="5dp"
        android:text="@string/ar_menu_type" />

    <TextView
        android:id="@+id/ar_menu_brand"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/ar_menu_brand" />

    <TextView
        android:id="@+id/ar_menu_model"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/ar_menu_model" />

    <TextView
        android:id="@+id/ar_menu_capabilities"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginStart="5dp"
        android:text="@string/ar_menu_capabilities" />

    <TextView
        android:id="@+id/ar_menu_touch_prompt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/ar_menu_touch_prompt" />

</LinearLayout>